--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -1,6 +1,25 @@
 \cvsection{Experience}
 \begin{cventries}
-\cventry{Contract Scala Developer}{Cloud Technologies S.A.}{Warsaw}{01.2018 --- now}{
+	
+\cventry{Big Data Consultant}{Nordea}{Warsaw}{07.2020 --- now}{
+	Developing and maintenance of reporting system serving Nordic accounts using Spark and Scala. 
+	Creating Oozie workflows with feedback available to the Internal Client. Creating tailored web applications for a specific Client needs. 
+	The solutions are hosted on a private cloud data centre based on MapR.
+	\\ \textbf{Key responsibilities}:
+	\begin{itemize}
+		\item{Big-data pipeline development using Scala with Apache Spark}
+		\item{Web application development using Scala and React}
+		\item{Using functional programming principles for solution scalability}
+		\item{Managing CI/CD pipeline using Jenkins}
+		\item{Preparing production environment and deployment automation using Ansible}
+		\item{Automating the build with Gradle}
+		\item{Scrum work environment}
+	\end{itemize}
+	\textbf{Used technologies}: Scala, Apache Spark, Hadoop, React, Oozie, YARN, HDFS, Maven, Gradle, Jenkins, Ansible, Git.
+}	
+	
+	
+\cventry{Contract Scala Developer}{Cloud Technologies S.A.}{Warsaw}{01.2018 --- 06.2020}{
 Development and maintenance of Real-Time Bidding (RTB) client platform. Developing the internal product, hosted on private (100+) servers. The solution is deployed in a cluster for both high availability and maximum throughput (~200k req/s) with lowest response time possible~(<100ms). Working closely with analysts team and media planers, creating product's improvement strategies and having a real impact on chosen solutions.
 \\ \textbf{Key responsibilities}:
 \begin{itemize}
@@ -15,7 +34,7 @@ Development and maintenance of Real-Time Bidding (RTB) client platform. Developi
 }
 
 
-\cventry{Contract Scala Developer}{QuintilesIMS}{Warsaw}{03.2017 --- 12.2017}{
+\cventry{Big Data Consultant}{QuintilesIMS}{Warsaw}{03.2017 --- 12.2017}{
 Developing data processing Spark solution deployed on a private cloud data centre based on Cloudera Hadoop Stack. Creating data processing pipelines for batch processing of big volume sources. 
 \\ \textbf{Key responsibilities}:
 \begin{itemize}
@@ -29,7 +48,7 @@ Developing data processing Spark solution deployed on a private cloud data centr
 \textbf{Used technologies}: Scala, Apache Spark, Hadoop, YARN, HDFS, sbt, Jenkins, Ansible, Git, Logstash, ElasticSearch, Kibana.
 }
 
-\cventry{Java/Scala Developer}{DOT Systems Sp. z o.o.}{Warsaw}{07.2015 --- 02.2017}{
+\cventry{Full Stack Engineer}{DOT Systems Sp. z o.o.}{Warsaw}{07.2015 --- 02.2017}{
 Working in the development and maintenance team in telecommunications industry for clients based in Middle East. Development of high-traffic capable web applications.
 \\ \textbf{Key responsibilities}:
 \begin{itemize}
@@ -44,7 +63,7 @@ Working in the development and maintenance team in telecommunications industry f
 \\\textbf{Front-end technologies}: JavaScript, TypeScript, AngularJS, React, Grunt, Gulp, Webpack, CSS, LESS, SASS.
 }
 
-\cventry{Software Engineering Associate}{Accenture}{Lodz}{10.2012 --- 06.2014}{
+\cventry{Java Software Engineer}{Accenture}{Lodz}{10.2012 --- 06.2014}{
 Part of eCommerce Hybris Core Development team.
 \\ \textbf{Key responsibilities}:
 \begin{itemize}
@@ -57,7 +76,7 @@ Part of eCommerce Hybris Core Development team.
 \\\textbf{Front-end technologies}: JavaScript, JSP, CSS.
 }
 
-\cventry{Intern}{Accenture}{Lodz}{07.2012 --- 09.2012}{
+\cventry{Junior Java Developer}{Accenture}{Lodz}{07.2012 --- 09.2012}{
 Part of an internal project that aimed to automate application process during job fairs.
 \\ \textbf{Key responsibilities}:
 \begin{itemize}
